--- a/index.html
+++ b/index.html
@@ -6108,6 +6108,11 @@
                                     style="min-height: 60px; margin: 15px 0 5px 0; display: flex !important; visibility: visible !important; justify-content: center; gap: 15px;">
                                     <!-- Premium Aura Spheres rendered here -->
                                 </div>
+                                <!-- 모바일 전용 선택 안내 문구 -->
+                                <div id="step3MobilePrompt"
+                                    style="display: none; text-align: center; color: #cbd5e1; font-size: 11px; font-weight: bold; padding: 2px 0 0 0; position: relative; z-index: 2; animation: pulse 2s infinite ease-in-out;">
+                                    위 4개 중 1개를 선택하세요!!
+                                </div>
                                 <!-- 손가락 포인터 (공 선택시 이동) -->
                                 <div id="fingerPointerWrapStep3Balls"
                                     style="position:relative; height:45px; display:flex; align-items:flex-start; justify-content:center; margin-top:-5px; opacity:0; pointer-events:none; transition:opacity 0.3s; z-index:3;">
@@ -10002,6 +10007,11 @@
                     gap: 10px !important;
                 }
 
+                #step3MobilePrompt {
+                    display: block !important;
+                    margin-bottom: -5px !important;
+                }
+
                 .rotating-ball {
                     width: 28px !important;
                     height: 28px !important;
@@ -10019,11 +10029,12 @@
                 }
 
                 #fingerPointerWrapStep3Balls {
-                    height: 30px !important;
+                    height: 25px !important;
                 }
 
                 #fingerPointerStep3Balls {
-                    font-size: 24px !important;
+                    font-size: 20px !important;
+                    top: 5px !important;
                 }
 
                 .hologram-chart {
