--- a/index.html
+++ b/index.html
@@ -8987,16 +8987,27 @@
                ========================================= */
                 .trend-cards-container {
                     perspective: 1000px;
+                    display: flex;
+                    justify-content: center;
+                    gap: 20px;
+                    /* PC Gap */
+                    width: 100%;
+                    padding: 10px 0;
+                    z-index: 2;
+                    position: relative;
                 }
 
                 .glass-trend-card {
                     position: relative;
                     flex: 1;
-                    max-width: 140px;
+                    max-width: 170px;
+                    /* PC Width */
+                    min-width: 140px;
                     background: rgba(15, 23, 42, 0.6);
                     border: 1px solid rgba(255, 255, 255, 0.1);
                     border-radius: 16px;
-                    padding: 15px 10px;
+                    padding: 20px 15px;
+                    /* PC Padding */
                     display: flex;
                     flex-direction: column;
                     align-items: center;
@@ -9037,8 +9048,9 @@
                 }
 
                 .trend-icon {
-                    font-size: 28px;
-                    margin-bottom: 8px;
+                    font-size: 34px;
+                    /* PC Icon Size */
+                    margin-bottom: 12px;
                     filter: drop-shadow(0 0 8px currentColor);
                     transition: transform 0.3s;
                 }
@@ -9048,32 +9060,37 @@
                 }
 
                 .trend-title {
-                    font-size: 15px;
+                    font-size: 18px;
+                    /* PC Title Size */
                     font-weight: 900;
                     letter-spacing: 1px;
                     color: #f8fafc;
-                    margin-bottom: 4px;
+                    margin-bottom: 6px;
                 }
 
                 .trend-tags {
-                    font-size: 9px;
+                    font-size: 11px;
+                    /* PC Tags */
                     color: #94a3b8;
                     font-weight: 700;
                     line-height: 1.2;
-                    margin-bottom: 6px;
+                    margin-bottom: 8px;
                     background: rgba(0, 0, 0, 0.3);
-                    padding: 3px 6px;
+                    padding: 4px 8px;
                     border-radius: 6px;
                     border: 1px solid rgba(255, 255, 255, 0.05);
                 }
 
                 .trend-desc {
-                    font-size: 9.5px;
+                    font-size: 11.5px;
+                    /* PC Desc */
                     color: #cbd5e1;
-                    line-height: 1.3;
-                    margin-bottom: 12px;
+                    line-height: 1.4;
+                    margin-bottom: 15px;
                     opacity: 0.8;
                     word-break: keep-all;
+                    height: 32px;
+                    /* Fixed height for alignment */
                 }
 
                 /* Theme Colors */
@@ -10298,34 +10315,41 @@
                     margin-top: -5px !important;
                 }
 
+                /* ==================================
+                   Step 4 Mobile UI Optimization 
+                   ================================== */
                 .trend-cards-container {
                     padding: 5px 0 !important;
-                    gap: 10px !important;
+                    gap: 8px !important;
                 }
 
                 .glass-trend-card {
-                    padding: 10px 5px !important;
+                    padding: 12px 6px !important;
+                    min-width: unset !important;
                 }
 
                 .trend-icon {
-                    font-size: 20px !important;
-                    margin-bottom: 2px !important;
+                    font-size: 22px !important;
+                    margin-bottom: 6px !important;
                 }
 
                 .trend-title {
-                    font-size: 11px !important;
+                    font-size: 12px !important;
                 }
 
                 .trend-tags {
                     font-size: 8px !important;
                     padding: 2px 4px !important;
-                    margin-bottom: 4px !important;
+                    margin-bottom: 5px !important;
+                    letter-spacing: -0.5px !important;
                 }
 
                 .trend-desc {
-                    font-size: 7.5px !important;
+                    font-size: 8px !important;
                     margin-bottom: 8px !important;
                     letter-spacing: -0.5px !important;
+                    height: 24px !important;
+                    line-height: 1.2 !important;
                 }
 
                 #aiMatchingScoreContainer {
@@ -10334,7 +10358,7 @@
                 }
 
                 #matchingScoreText {
-                    font-size: 14px !important;
+                    font-size: 15px !important;
                 }
             }
 
