fix(step4): resolve dark text on dark background issue inside regression cards

--- a/index.html
+++ b/index.html
@@ -8619,6 +8619,38 @@
                 box-shadow: 0 0 50px rgba(0, 0, 0, 0.9), inset 0 0 30px rgba(59, 130, 246, 0.15) !important;
             }
 
+            /* Step 4 True Dark Mode Text Color Overrides */
+            .admin-modal-content.step3-dark-override #naviStep4 h2 {
+                color: #e2e8f0 !important;
+            }
+
+            .admin-modal-content.step3-dark-override #naviStep4 .reg-label-pc,
+            .admin-modal-content.step3-dark-override #naviStep4 .cumulative-status,
+            .admin-modal-content.step3-dark-override #regCumulativeStatus {
+                color: #cbd5e1 !important;
+            }
+
+            .admin-modal-content.step3-dark-override #naviStep4 .trend-title {
+                color: #f8fafc !important;
+            }
+
+            .admin-modal-content.step3-dark-override #naviStep4 .trend-tags {
+                color: #94a3b8 !important;
+            }
+
+            .admin-modal-content.step3-dark-override #naviStep4 .trend-desc {
+                color: #cbd5e1 !important;
+            }
+
+            .admin-modal-content.step3-dark-override #naviStep4 .fixed-num-tag {
+                color: #333 !important;
+            }
+
+            /* Keep ball text dark */
+            .admin-modal-content.step3-dark-override #naviStep4 .fixed-num-empty {
+                color: #94a3b8 !important;
+            }
+
             .futuristic-card {
                 background: rgba(15, 23, 42, 0.85);
                 border: 1px solid rgba(148, 163, 184, 0.15);
