fix(step1): final 32% width reduction for mobile battle boxes

--- a/index.html
+++ b/index.html
@@ -9960,10 +9960,10 @@
                     box-sizing: border-box;
                     min-height: 165px !important;
                     /* 1.2x of current 137px */
-                    flex: 0 0 38% !important;
-                    width: 38% !important;
-                    max-width: 38% !important;
-                    /* [요청] 가로 길이 85% 수준으로 확실하게 축소 */
+                    flex: 0 0 32% !important;
+                    width: 32% !important;
+                    max-width: 32% !important;
+                    /* [요청] 가로 길이 한번 더 85% 수준으로 확실하게 축소 (38% -> 32%) */
                 }
 
                 /* [요청] 측면 타이틀: 1.1배 확대 (11.25px -> 12.4px) */
