--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
             font-size: 20px;
             color: var(--primary);
             margin: 0 0 20px 0;
+            text-align: left;
+            /* [요청] PC 헤더 왼쪽 정렬 */
         }
 
         .section {
@@ -2600,7 +2602,7 @@
 
             <!-- 로또 Navi 시작 버튼 (사용자 요청 위치) -->
             <button id="naviModeBtn" onclick="toggleNaviMode()"
-                style="width: 100%; margin: 10px 0 20px 0; padding: 12px; font-size: 19.2px; background: linear-gradient(135deg, #1976d2, #1565c0); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                style="width: 100%; margin: 10px 0 20px 0; padding: 9.5px 12px; font-size: 19.2px; background: linear-gradient(135deg, #5D31D4, #4A27AB); color: white; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; display: flex; align-items: center; justify-content: center; gap: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                 🧭 로또 Navi by AI
             </button>
 
@@ -10519,6 +10521,8 @@
                     padding: 14px 10px !important;
                     border-radius: 14px !important;
                     letter-spacing: 0.5px !important;
+                    /* [요청] 모바일은 기존 파란색 유지 */
+                    background: linear-gradient(135deg, #1976d2, #1565c0) !important;
                 }
 
                 /* ===== Step 6: AI Matrix is the HIGHLIGHT — maximize its space ===== */
