style(mobile): apply KINOV purple color to navi button on mobile

--- a/index.html
+++ b/index.html
@@ -10526,8 +10526,8 @@
                     justify-content: flex-start !important;
                     /* [요청] 모바일도 왼쪽 정렬 */
                     gap: 8px !important;
-                    /* [요청] 모바일은 기존 파란색 유지 */
-                    background: linear-gradient(135deg, #1976d2, #1565c0) !important;
+                    /* [요청] 모바일도 KINOV 보라색 적용 */
+                    background: linear-gradient(135deg, #5D31D4, #4A27AB) !important;
                 }
 
                 /* ===== Step 6: AI Matrix is the HIGHLIGHT — maximize its space ===== */
