--- a/index.html
+++ b/index.html
@@ -10246,8 +10246,8 @@
                 .perfect-balance-text {
                     font-size: 12px !important;
                     top: 25% !important;
-                    margin-top: 4px !important;
-                    /* [요청] 4px 아래로 이동 */
+                    margin-top: 9px !important;
+                    /* [요청] 4px + 추가 5px 아래로 이동 */
                 }
 
                 #balanceScoreText {
